--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -220,16 +220,9 @@ testing:promote:gpu:
     reports:
       junit: report.xml
 
-.testing:integration:cpu:
+testing:integration:en-us:cpu:
   extends: .testing:integration
   needs: ["testing:promote:cpu"]
-
-.testing:integration:gpu:
-  extends: .testing:integration
-  needs: ["testing:promote:gpu"]
-
-testing:integration:en-us:cpu:
-  extends: .testing:integration:cpu
   variables:
     LANGUAGE: en-us
   services:
@@ -239,7 +232,8 @@ testing:integration:en-us:cpu:
         LANGUAGE: en-us
 
 testing:integration:es:cpu:
-  extends: .testing:integration:cpu
+  extends: .testing:integration
+  needs: ["testing:promote:cpu"]
   variables:
     LANGUAGE: es
   services:
@@ -249,7 +243,8 @@ testing:integration:es:cpu:
         LANGUAGE: es
 
 testing:integration:pt-br:cpu:
-  extends: .testing:integration:cpu
+  extends: .testing:integration
+  needs: [ "testing:promote:cpu" ]
   variables:
     LANGUAGE: pt-br
   services:
@@ -259,7 +254,8 @@ testing:integration:pt-br:cpu:
         LANGUAGE: pt-br
 
 testing:integration:en-us:gpu:
-  extends: .testing:integration:gpu
+  extends: .testing:integration
+  needs: [ "testing:promote:gpu" ]
   tags:
     - gpu
   allow_failure: true
@@ -272,7 +268,8 @@ testing:integration:en-us:gpu:
         LANGUAGE: en-us
 
 testing:integration:es:gpu:
-  extends: .testing:integration:gpu
+  extends: .testing:integration
+  needs: [ "testing:promote:gpu" ]
   tags:
     - gpu
   allow_failure: true
@@ -285,7 +282,8 @@ testing:integration:es:gpu:
         LANGUAGE: es
 
 testing:integration:pt-br:gpu:
-  extends: .testing:integration:gpu
+  extends: .testing:integration
+  needs: [ "testing:promote:gpu" ]
   tags:
     - gpu
   allow_failure: true
