--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,12 +60,12 @@ server = [
     "sox >= 1.4.1",
     "scipy >= 1.10.0",
     "grpcio-health-checking >= 1.47.0",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/dd9cfb194c7c3c4652e1a320dfadf71d00db75c3081aa554f3b31bc4faf9f4b0/pyformatter-1.3.11-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/789824799d8386891c8dfefd81968d714eaa804eb5a3c43d32b996c37a091f99/pyformatter-1.3.11-cp310-cp310-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/171256e80601d9542833c68b4245cd6b089c5eeabdde630f3385b93d4a8909aa/pyformatter-1.3.11-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/c2efb5f5335d12f986c6eac5dd6532cc41779b0b544e2705f24b9c2763d20014/pyformatter-1.3.11-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/9d7278a1d271c73e1879a8d9e0d1981fbc998625bb3bee68584c0f620a537012/pyformatter-1.3.11-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/7c7b0b4600cf3d5b40d2383ea7c1af31a65940c2cd55df9e88517f5f27bc6ce3/pyformatter-1.3.11-cp36-cp36m-linux_x86_64.whl ; python_version=='3.6' and platform_system=='Linux'", ]
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/213/download ; python_version=='3.11' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/212/download ; python_version=='3.10' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/217/download/ ; python_version=='3.9' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/216/download ; python_version=='3.8' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/215/download ; python_version=='3.7' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/214/download ; python_version=='3.6' and platform_system=='Linux'", ]
 cpu = [
     "torch @ https://__token__:glpat-T_XsetcZptjqx11YLAyG@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/31d6945e955259efdfc64d85645329b7252fa5d5756bec2613d2a4b47389f4fc/torch-1.12.0a0+git8c5c07c-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "torch @ https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
