--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,12 +60,12 @@ server = [
     "sox >= 1.4.1",
     "scipy >= 1.10.0",
     "grpcio-health-checking >= 1.47.0",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/213/download ; python_version=='3.11' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/212/download ; python_version=='3.10' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/217/download/ ; python_version=='3.9' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/216/download ; python_version=='3.8' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/215/download ; python_version=='3.7' and platform_system=='Linux'",
-    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@https://gitlab.lan.verbio.com/cognitive/libformatter/-/package_files/214/download ; python_version=='3.6' and platform_system=='Linux'", ]
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/9161c4bb44d6f7626de4b18296a68224f7a6840f91efaf302e57ce7e3694c049/pyformatter-1.3.12-cp311-cp311-linux_x86_64.whl ; python_version=='3.11' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/57682b313392412c66e332d607c099c794f7aba566a223287ad92c0afa16f662/pyformatter-1.3.12-cp310-cp310-linux_x86_64.whl ; python_version=='3.10' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/4e766fa9388e2a0deacb144ba955c6200a97634f255e8dcef00000eea9ec9dcf/pyformatter-1.3.12-cp39-cp39-linux_x86_64.whl ; python_version=='3.9' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/adafaee114af69a0a600bec640083124a23b3db7068d5e756c3d7a367a8aa70f/pyformatter-1.3.12-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/388ae967bec86ede04f07a70bdf2bd30c865577496760f1df2b08495522172c1/pyformatter-1.3.12-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
+    "pyformatter @ https://__token__:qKtzEZznR88brmJub-nm@gitlab.lan.verbio.com/api/v4/projects/949/packages/pypi/files/e44f50c249aeb1daaa4d41eb4af4167e3cba299f288a02514d54c979d4081559/pyformatter-1.3.12-cp36-cp36m-linux_x86_64.whl ; python_version=='3.6' and platform_system=='Linux'", ]
 cpu = [
     "torch @ https://__token__:glpat-T_XsetcZptjqx11YLAyG@gitlab.lan.verbio.com/api/v4/projects/1440/packages/pypi/files/31d6945e955259efdfc64d85645329b7252fa5d5756bec2613d2a4b47389f4fc/torch-1.12.0a0+git8c5c07c-cp37-cp37m-linux_x86_64.whl ; python_version=='3.7' and platform_system=='Linux'",
     "torch @ https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp38-cp38-linux_x86_64.whl ; python_version=='3.8' and platform_system=='Linux'",
